--- a/src/styling/style.scss
+++ b/src/styling/style.scss
@@ -484,7 +484,7 @@ body {
 //Dashboard
 #userDash {
 
-    background: $a9;
+    background: $t8;
     position: fixed;
     top: 48px;
     right: 0;
@@ -585,20 +585,25 @@ body {
 
         div {
             width: calc(100% - 10px);
-            width: 100%;
             display: block;
             position: relative;
             padding: 0;
             border-radius: 4px;
+            color:white; 
+            padding: 5px;
         }
         div:nth-child(1) {
             background-color: $a7;
-            height: 150px;
+            height: 140px;
         }
         div:nth-child(2) {
             background-color: $a2;
-            height: calc(100% - 155px);
+            height: calc(100% - 165px);
             margin-top: 5px;
+            overflow-y: scroll;
+            &::-webkit-scrollbar {
+                display: none;
+            }
         }
         
     }
@@ -956,7 +961,7 @@ body {
                 width: 10px;
                 display: inline-block;
                 margin: 5px 2.5px 5px 2.5px;
-                background: $a7;
+                background: $at7;
                 top:0;
             }
         }
@@ -1561,13 +1566,24 @@ body {
 
 // Help Desk Responsive
 
+
 @media only screen and (min-height: 10px) and (min-width: 10px) {
 
     #helpDeskChats {
-        height: calc(100% - 345px);
+        height: calc(100% - 195px);
     }
     #helpDeskForm {
-        height: 300px;
+        height: 150px;
+    }
+
+}
+@media only screen and (min-height: 500px) and (min-width: 10px) {
+
+    #helpDeskChats {
+        height: calc(100% - 295px);
+    }
+    #helpDeskForm {
+        height: 250px;
     }
 
 }
@@ -1589,7 +1605,19 @@ body {
         height: 500px;
     }    
 }
+
+
 @media only screen and (min-height: 10px) and (min-width: 1050px) {
+
+    #helpDeskChats {
+        height: calc(100% - 34px);
+    }
+    #helpDeskForm {
+        height: calc(100% - 34px);
+    }
+
+}
+@media only screen and (min-height: 400px) and (min-width: 1050px) {
 
     #helpDeskChats {
         height: calc(100% - 34px);
